--- a/.github/workflows/ci-dockerhub.yml
+++ b/.github/workflows/ci-dockerhub.yml
@@ -18,11 +18,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-
     - name: Install deps
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        echo "::add-path::$(python -c 'import site; print(site.USER_BASE)')/bin"
+
 
     - name: Run tests
       run: pytest -q
